mpcop (0.1.1) UNRELEASED; urgency=medium

  * docs: add documentation

 -- Kristian Mika <xmika2@mail.muni.cz>  Sun, 21 Nov 2021 07:38:30 +0100

mpcop (0.1.0) unstable; urgency=medium

  * feat: initial platform

 -- Kristian Mika <xmika2@mail.muni.cz>  Thu, 18 Nov 2021 23:07:01 +0100